final changes made

--- a/mynewwebsite/index.html/firstpage.html
+++ b/mynewwebsite/index.html/firstpage.html
@@ -33,7 +33,7 @@
         MT FIRST HTML WEBSITE
     </h1>
     <button class="button">
-        <a href="" class="link">
+        <a href="introduction.html.html" class="link">
         GET STARTED 
         </a></button>
 
